--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
-theme: fundamental
-
 title: Fundamental
 author:
   name: Theo Messenger-Jones
   github: theomjones
   twitter: theomjones
 
-baseurl: "" # Use if your site will be located in a subdirectory, e.g. /blog.
+# If you don't have a favicon, change to false.
+favicon: true
+
+baseurl: "/fundamental" # Use if your site will be located in a subdirectory, e.g. /blog.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 description: Fundamental is a lightweight Jekyll theme.
@@ -20,13 +21,15 @@ theme: fundamental
 enabled:
   breadcrumbs: true
   tags: true
-  # Enable RSS in menu
+  # Enable RSS menu item
   rss: false
+  seo: true
 
 #Plugins
 plugins:
   - jekyll-feed
   - jekyll-archives
+  - jekyll-seo-tag
 
 # Compress Sass for production.
 # sass:
@@ -57,13 +60,10 @@ jekyll-archives:
   layout: 'archive'
   layouts:
     tag: 'tag_page'
+    month: month
   permalinks:
     year: '/:year/'
     month: '/:year/:month/'
     day: '/:year/:month/:day/'
     tag: '/tag/:name/'
     category: '/category/:name/'
-
-# Jekyll Tagging
-#tag_page_layout: tag_page
-#tag_page_dir: tag
