--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,18 @@
 title: Fundamental
 author:
-  name: Theo Messenger-Jones
+  name: Theo M Jones
   github: theomjones
   twitter: theomjones
 
 # If you don't have a favicon, change to false.
 favicon: true
 
-baseurl: "/fundamental" # Use if your site will be located in a subdirectory, e.g. /blog.
+footer:
+  separator: '|'
+  content: Ⓒ Theo M Jones
+  year: true
+
+baseurl: "" # Use if your site will be located in a subdirectory, e.g. /blog.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 description: Fundamental is a lightweight Jekyll theme.
